Fix z-index (.modal-background)

--- a/src/styles/components/modals.scss
+++ b/src/styles/components/modals.scss
@@ -41,7 +41,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 2;
+    z-index: 3;
     display: flex;
     justify-content: center;
     align-items: center;
